lib_libtmLQCD_a_SOURCES+= \
	%D%/gauge.c \
	%D%/gauge_allocate_gauge_buffers.c \
	%D%/gauge_finalize_gauge_buffers.c \
	%D%/gauge_free_unused_gauge_buffers.c \
	%D%/gauge_get_gauge_field.c \
	%D%/gauge_get_gauge_field_array.c \
	%D%/gauge_initialize_gauge_buffers.c \
	%D%/gauge_return_gauge_field.c \
	%D%/gauge_return_gauge_field_array.c \
	%D%/utils_generic_exchange.c
