lib_libtmLQCD_a_SOURCES+= \
	%D%/init_bispinor_field.c \
	%D%/init_chi_spinor_field.c \
	%D%/init_dirac_halfspinor.c \
	%D%/init_gauge_field.c \
	%D%/init_gauge_tmp.c \
	%D%/init_geometry_indices.c \
	%D%/init_jacobi_field.c \
	%D%/init_moment_field.c \
	%D%/init_omp_accumulators.c \
	%D%/init_openmp.c \
	%D%/init_parallel.c \
	%D%/init_spinor_field.c
