lib_libtmLQCD_a_SOURCES+= \
	%D%/DML_crc32.c \
	%D%/deri_write_stdout.c \
	%D%/dml.c \
	%D%/eospinor_read.c \
	%D%/eospinor_write.c \
	%D%/gauge_read.c \
	%D%/gauge_read_binary.c \
	%D%/gauge_write.c \
	%D%/gauge_write_binary.c \
	%D%/gauge_write_luscher_binary.c \
	%D%/io_cm.c \
	%D%/params_construct_InverterInfo.c \
	%D%/params_construct_ildgFormat.c \
	%D%/params_construct_propagatorFormat.c \
	%D%/params_construct_sourceFormat.c \
	%D%/params_construct_xlfInfo.c \
	%D%/spinor_read.c \
	%D%/spinor_read_binary.c \
	%D%/spinor_write.c \
	%D%/spinor_write_binary.c \
	%D%/spinor_write_info.c \
	%D%/spinor_write_propagator_format.c \
	%D%/spinor_write_propagator_type.c \
	%D%/spinor_write_source_format.c \
	%D%/spinor_write_stdout.c \
	%D%/sw_write_stdout.c \
	%D%/utils.c \
	%D%/utils_close_reader_record.c \
	%D%/utils_close_writer_record.c \
	%D%/utils_construct_reader.c \
	%D%/utils_construct_writer.c \
	%D%/utils_destruct_reader.c \
	%D%/utils_destruct_writer.c \
	%D%/utils_engineering.c \
	%D%/utils_kill_with_error.c \
	%D%/utils_parse_checksum_xml.c \
	%D%/utils_parse_ildgformat_xml.c \
	%D%/utils_parse_propagator_type.c \
	%D%/utils_read_message.c \
	%D%/utils_write_checksum.c \
	%D%/utils_write_first_message.c \
	%D%/utils_write_header.c \
	%D%/utils_write_ildg_format.c \
	%D%/utils_write_inverter_info.c \
	%D%/utils_write_message.c \
	%D%/utils_write_xlf.c \
	%D%/utils_write_xlf_xml.c
