lib_libtmLQCD_a_SOURCES+= \
	%D%/add.c \
	%D%/addto_32.c \
	%D%/assign.c \
	%D%/assign_add_mul.c \
	%D%/assign_add_mul_add_mul.c \
	%D%/assign_add_mul_add_mul_r.c \
	%D%/assign_add_mul_r.c \
	%D%/assign_add_mul_r_32.c \
	%D%/assign_add_mul_r_add_mul.c \
	%D%/assign_diff_mul.c \
	%D%/assign_mul_add.c \
	%D%/assign_mul_add_mul.c \
	%D%/assign_mul_add_mul_add_mul_add_mul_r.c \
	%D%/assign_mul_add_mul_add_mul_r.c \
	%D%/assign_mul_add_mul_r.c \
	%D%/assign_mul_add_mul_r_32.c \
	%D%/assign_mul_add_r.c \
	%D%/assign_mul_add_r_32.c \
	%D%/assign_mul_add_r_and_square.c \
	%D%/assign_mul_bra_add_mul_ket_add.c \
	%D%/assign_mul_bra_add_mul_ket_add_r.c \
	%D%/assign_mul_bra_add_mul_r.c \
	%D%/assign_to_32.c \
	%D%/comp_decomp.c \
	%D%/convert_eo_to_lexic.c \
	%D%/diff.c \
	%D%/diff_32.c \
	%D%/diff_and_square_norm.c \
	%D%/mattimesvec.c \
	%D%/mul.c \
	%D%/mul_add_mul.c \
	%D%/mul_add_mul_r.c \
	%D%/mul_diff_mul.c \
	%D%/mul_diff_mul_r.c \
	%D%/mul_diff_r.c \
	%D%/mul_r.c \
	%D%/mul_r_32.c \
	%D%/scalar_prod.c \
	%D%/scalar_prod_i.c \
	%D%/scalar_prod_r.c \
	%D%/scalar_prod_r_32.c \
	%D%/scalar_prod_su3spinor.c \
	%D%/square_and_prod_r.c \
	%D%/square_norm.c \
	%D%/square_norm_32.c
