lib_libtmLQCD_a_SOURCES+= \
        %D%/bicgstab_complex.c \
        %D%/gmres.c \
        %D%/incr_eigcg.c \
        %D%/eigcg.c \
        %D%/restart_X.c \
        %D%/ortho.c \
        %D%/cgs_real.c \
        %D%/cg_her.c \
        %D%/mr.c \
        %D%/chrono_guess.c \
        %D%/bicgstabell.c \
        %D%/bicgstab2.c \
        %D%/eigenvalues.c \
        %D%/fgmres.c \
        %D%/gcr.c \
        %D%/gcr4complex.c \
        %D%/diagonalise_general_matrix.c \
        %D%/cgne4complex.c \
        %D%/mr4complex.c \
        %D%/fgmres4complex.c \
        %D%/quicksort.c \
        %D%/gmres_dr.c \
        %D%/lu_solve.c \
        %D%/jdher.c \
        %D%/Msap.c \
        %D%/jdher_bi.c \
        %D%/gram-schmidt.c \
        %D%/eigenvalues_bi.c \
        %D%/bicgstab_complex_bi.c \
        %D%/cg_her_bi.c \
        %D%/pcg_her.c \
        %D%/sub_low_ev.c \
        %D%/cg_her_nd.c \
        %D%/poly_precon.c \
        %D%/generate_dfl_subspace.c \
        %D%/dfl_projector.c \
        %D%/cg_mms_tm.c \
        %D%/cg_mms_tm_nd.c \
        %D%/mixed_cg_mms_tm_nd.c \
        %D%/solver_field.c \
        %D%/sumr.c \
        %D%/mixed_cg_her.c \
        %D%/index_jd.c \
        %D%/rg_mixed_cg_her.c \
        %D%/rg_mixed_cg_her_nd.c \
        %D%/dirac_operator_eigenvectors.c \
        %D%/spectral_proj.c \
        %D%/jdher_su3vect.c \
        %D%/cg_her_su3vect.c \
        %D%/eigenvalues_Jacobi.c \
        %D%/mcr.c \
        %D%/cr.c \
        %D%/mcr4complex.c \
        %D%/bicg_complex.c \
        %D%/monomial_solve.c \
        %D%/solver_types.c
