AM_CFLAGS = -I@top_srcdir@/include

lib_LIBRARIES = liblemon.a

liblemon_a_SOURCES = header_construct.c reader_closeRecord.c \
                     reader_nextRecord.c writer_construct.c header_destroy.c \
                     reader_construct.c reader_padBytes.c writer_destroy.c \
                     reader_destroy.c reader_readData.c writer_latticeParallel.c \
                     reader_EOM.c reader_seek.c writer_recordData.c reader_getPointer.c \
                     reader_setPointer.c writer_recordHeader.c reader_latticeParallel.c \
                     reader_setState.c writer_seek.c reader_MBFlag.c reader_type.c \
                     writer_setState.c reader_bytes.c reader_MEFlag.c writer_closeRecord.c
